# personal_ai_assistant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/agent/: assistant.py  prefs.py  session.py
src/feishu/: bot.py  card.py  feishu_client.py
