[project]
name = "personal-ai-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "lark-oapi>=1.3.0",
    "httpx",
    "cachetools",
    "claude-agent-sdk",
    "python-dotenv",
]

[project.scripts]
start = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
